# axon-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
amcx_convert/: Cargo.toml
amcx_convert/src/: lib.rs  to_gltf.rs
amcx_core/: Cargo.toml
amcx_core/src/: lib.rs
amcx_parser/: Cargo.toml
amcx_parser/src/: lib.rs  parsing_error.rs  processing.rs  raw_parsing.rs  test.rs
assets/models/Calibration/: Calibration.gltf
assets/models/Calibration2/: Calibration2.gltf
assets/models/Human/: HumanBody.gltf
model_output/: Calibration.gltf  Calibration2.gltf  HumanBody.gltf  HumanModel.gltf
src/: default_models.rs  icons.rs  logic.rs  main.rs  modules.rs  state.rs
src/assets/model/: HumanBody.gltf
src/modules/: amcx_parser.rs
src/modules/custom_widgets/: menu.rs
src/state/: charts.rs  update.rs  view.rs
test_data/: DATA0.amcx  LOG100.amcx  LOG2.amcx  LOG99.amcx  OneSensorTestData.amcx  calibration_0.amcx  calibration_1.amcx  left_hand_animation.TXT  left_hand_calibration.TXT  real_2.amcx  real_3.amcx  real_4.amcx  right_hand_animation.TXT  right_hand_calibration.TXT  test1.amcx  test3.amcx  unreal-2.amcx  unreal-3.amcx  unreal.amcx  unreal1.amcx
