[package]
name = "axon"
version = "0.1.0"
edition.workspace = true

[dependencies]
gltf = "1.4.1"
iced = { version = "0.13.1", features = ["advanced"] }
iced_aw = "0.12.2"
plotters = "0.3.7"
plotters-iced = "0.11.0"
rfd = "0.15.3"

[workspace]
package.edition = "2021"
members = ["amcx_convert", "amcx_core", "amcx_parser"]

[workspace.dependencies]
amcx_core = { path = "amcx_core" }
amcx_parser = { path = "amcx_parser" }
amcx_convert = { path = "amcx_convert" }

thiserror = "2.0.12"