[package]
name = "axon"
version = "0.1.0"
edition.workspace = true

[dependencies]
amcx_core.workspace = true
amcx_parser.workspace = true

gltf = "1.4.1"
iced = { version = "0.13.1", features = ["advanced", "tokio"] }
iced_aw = "0.12.2"
plotters = "0.3.7"
plotters-iced = "0.11.0"
rfd = "0.15.3"
tokio = { version = "1.45.1", features = ["fs"] }

[workspace]
package.edition = "2024"
members = ["amcx_convert", "amcx_core", "amcx_parser"]

[workspace.dependencies]
amcx_core = { path = "amcx_core" }
amcx_parser = { path = "amcx_parser" }
amcx_convert = { path = "amcx_convert" }

thiserror = "2.0.12"
